# vms-shell

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
modules/: pool.py  vms_api.py
src/: try.py
src/vms_shell/: main.py
src/vms_shell/modules/: namer.py  pool.py  vms_api.py
